fix sms and print buttons overlapping border

--- a/styles.css
+++ b/styles.css
@@ -1413,6 +1413,8 @@ ul#tabRow .tab a, ul#byTabRow .tab a {
 
 #byTabRow {
     margin-bottom:-15px;
+    postition:relative;
+    bottom: 8px;
 }
 
 #byTabRow a {
